--- a/config/crd/bases/irsa.kkb0318.github.io_irsasetups.yaml
+++ b/config/crd/bases/irsa.kkb0318.github.io_irsasetups.yaml
@@ -91,6 +91,31 @@ spec:
             type: object
           status:
             description: IRSASetupStatus defines the observed state of IRSASetup
+            properties:
+              commonSetup:
+                description: CommonStatus is a set of status attributes
+                properties:
+                  errors:
+                    items:
+                      type: string
+                    type: array
+                  healthy:
+                    type: boolean
+                required:
+                - healthy
+                type: object
+              selfHostedSetup:
+                description: CommonStatus is a set of status attributes
+                properties:
+                  errors:
+                    items:
+                      type: string
+                    type: array
+                  healthy:
+                    type: boolean
+                required:
+                - healthy
+                type: object
             type: object
         type: object
     served: true
