--- a/config/crd/bases/irsa.kkb0318.github.io_irsasetups.yaml
+++ b/config/crd/bases/irsa.kkb0318.github.io_irsasetups.yaml
@@ -15,7 +15,7 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.selfHostedSetup.conditions[?(@.type=="Ready")].status
+    - jsonPath: .status.selfHostedSetup[?(@.type=="Ready")].status
       name: SelfHostedReady
       type: string
     name: v1alpha1
