--- a/internal/selfhosted/webhook/testdata/mutatingwebhook.yaml
+++ b/internal/selfhosted/webhook/testdata/mutatingwebhook.yaml
@@ -1,4 +1,4 @@
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
   name: pod-identity-webhook
@@ -16,3 +16,5 @@ webhooks:
         apiGroups: [""]
         apiVersions: ["v1"]
         resources: ["pods"]
+    sideEffects: None
+    admissionReviewVersions: ["v1beta1"]
