--- a/config/crd/bases/irsa.kkb0318.github.io_irsasetups.yaml
+++ b/config/crd/bases/irsa.kkb0318.github.io_irsasetups.yaml
@@ -63,6 +63,11 @@ spec:
                 required:
                 - secretRef
                 type: object
+              cleanup:
+                description: |-
+                  Cleanup, when enabled, allows the IRSASetup to perform garbage collection
+                  of resources that are no longer needed or managed.
+                type: boolean
               discovery:
                 description: |-
                   Discovery configures the IdP Discovery process, essential for setting up IRSA by locating
@@ -90,6 +95,7 @@ spec:
                   or "eks".
                 type: string
             required:
+            - cleanup
             - discovery
             - mode
             type: object
