--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -65,6 +65,18 @@ rules:
   - update
   - watch
 - apiGroups:
+  - certificates.k8s.io
+  resources:
+  - certificatesigningrequests
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - irsa.kkb0318.github.io
   resources:
   - irsasetups
