--- a/internal/selfhosted/webhook/testdata/deployment.yaml
+++ b/internal/selfhosted/webhook/testdata/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: pod-identity-webhook
       containers:
         - name: pod-identity-webhook
-          image: quay.io/amis/pod-identity-webhook:v0.0.1
+          image: amazon/amazon-eks-pod-identity-webhook:latest
           imagePullPolicy: Always
           # command:
           # - /webhook
@@ -31,3 +31,7 @@ spec:
             - name: cert
               mountPath: /etc/webhook/certs
               readOnly: true
+      # volumes:
+      #   - name: cert
+      #     secret:
+      #       secretName: pod-identity-webhook
