--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - irsa_v1alpha1_irsasetup.yaml
+- irsa_v1alpha1_irsa.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
