--- a/config/crd/bases/irsa.kkb0318.github.io_irsas.yaml
+++ b/config/crd/bases/irsa.kkb0318.github.io_irsas.yaml
@@ -39,6 +39,11 @@ spec:
           spec:
             description: IRSASpec defines the desired state of IRSA
             properties:
+              cleanup:
+                description: |-
+                  Cleanup, when enabled, allows the IRSA to perform garbage collection
+                  of resources that are no longer needed or managed.
+                type: boolean
               iamPolicies:
                 description: IamPolicies represents the list of IAM policies to be
                   attached to the IAM role
@@ -68,6 +73,8 @@ spec:
                       type: string
                     type: array
                 type: object
+            required:
+            - cleanup
             type: object
           status:
             description: IRSAStatus defines the observed state of IRSA
