--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -52,6 +52,8 @@ jobs:
   chart-release:
     runs-on: ubuntu-20.04
     needs: build-and-push-image
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
