--- a/config/rbac/irsa_editor_role.yaml
+++ b/config/rbac/irsa_editor_role.yaml
@@ -11,21 +11,21 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: irsa-editor-role
 rules:
-- apiGroups:
-  - irsa.kkb0318.github.io
-  resources:
-  - irsas
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - irsa.kkb0318.github.io
-  resources:
-  - irsas/status
-  verbs:
-  - get
+  - apiGroups:
+      - irsa-manager.kkb0318.github.io
+    resources:
+      - irsas
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - irsa-manager.kkb0318.github.io
+    resources:
+      - irsas/status
+    verbs:
+      - get
