--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -77,7 +77,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - irsa.kkb0318.github.io
+  - irsa-manager.kkb0318.github.io
   resources:
   - irsas
   verbs:
@@ -89,13 +89,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - irsa.kkb0318.github.io
+  - irsa-manager.kkb0318.github.io
   resources:
   - irsas/finalizers
   verbs:
   - update
 - apiGroups:
-  - irsa.kkb0318.github.io
+  - irsa-manager.kkb0318.github.io
   resources:
   - irsas/status
   verbs:
@@ -103,7 +103,7 @@ rules:
   - patch
   - update
 - apiGroups:
-  - irsa.kkb0318.github.io
+  - irsa-manager.kkb0318.github.io
   resources:
   - irsasetups
   verbs:
@@ -115,13 +115,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - irsa.kkb0318.github.io
+  - irsa-manager.kkb0318.github.io
   resources:
   - irsasetups/finalizers
   verbs:
   - update
 - apiGroups:
-  - irsa.kkb0318.github.io
+  - irsa-manager.kkb0318.github.io
   resources:
   - irsasetups/status
   verbs:
