--- a/charts/irsa-manager/crds/irsa-crd.yaml
+++ b/charts/irsa-manager/crds/irsa-crd.yaml
@@ -3,25 +3,24 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
-  name: irsasetups.irsa-manager.kkb0318.github.io
+  name: irsas.irsa-manager.kkb0318.github.io
 spec:
   group: irsa-manager.kkb0318.github.io
   names:
-    kind: IRSASetup
-    listKind: IRSASetupList
-    plural: irsasetups
-    singular: irsasetup
+    kind: IRSA
+    listKind: IRSAList
+    plural: irsas
+    singular: irsa
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.selfHostedSetup[?(@.type=="Ready")].status
-      name: SelfHostedReady
+    - jsonPath: .status.conditions[?(@.type=="Ready")].status
+      name: Ready
       type: string
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: IRSASetup represents a configuration for setting up IAM Roles
-          for Service Accounts (IRSA) in a Kubernetes cluster.
+        description: IRSA is the Schema for the irsas API
         properties:
           apiVersion:
             description: |-
@@ -41,48 +40,50 @@ spec:
           metadata:
             type: object
           spec:
-            description: IRSASetupSpec defines the desired state of IRSASetup
+            description: IRSASpec defines the desired state of IRSA
             properties:
               cleanup:
                 description: |-
-                  Cleanup, when enabled, allows the IRSASetup to perform garbage collection
+                  Cleanup, when enabled, allows the IRSA to perform garbage collection
                   of resources that are no longer needed or managed.
                 type: boolean
-              discovery:
+              iamPolicies:
                 description: |-
-                  Discovery configures the IdP Discovery process, essential for setting up IRSA by locating
-                  the OIDC provider information.
+                  IamPolicies represents the list of IAM policies to be attached to the IAM role.
+                  You can set both the policy name (only AWS default policies) or the full ARN.
+                items:
+                  type: string
+                type: array
+              iamRole:
+                description: IamRole represents the IAM role details associated with
+                  the IRSA.
                 properties:
-                  s3:
-                    description: S3 specifies the AWS S3 bucket details where the
-                      OIDC provider's discovery information is hosted.
-                    properties:
-                      bucketName:
-                        description: BucketName is the name of the S3 bucket that
-                          hosts the OIDC discovery information.
-                        type: string
-                      region:
-                        description: Region denotes the AWS region where the S3 bucket
-                          is located.
-                        type: string
-                    required:
-                    - bucketName
-                    - region
-                    type: object
+                  name:
+                    description: Name represents the name of the IAM role.
+                    type: string
                 type: object
-              mode:
-                description: Mode specifies the mode of operation. Can be either "selfhosted"
-                  or "eks".
-                type: string
+              serviceAccount:
+                description: ServiceAccount represents the Kubernetes service account
+                  associated with the IRSA.
+                properties:
+                  name:
+                    description: Name represents the name of the Kubernetes service
+                      account
+                    type: string
+                  namespaces:
+                    description: Namespaces represents the list of namespaces where
+                      the service account is used
+                    items:
+                      type: string
+                    type: array
+                type: object
             required:
             - cleanup
-            - discovery
-            - mode
             type: object
           status:
-            description: IRSASetupStatus defines the observed state of IRSASetup
+            description: IRSAStatus defines the observed state of IRSA.
             properties:
-              selfHostedSetup:
+              conditions:
                 items:
                   description: "Condition contains details for one aspect of the current
                     state of this API Resource.\n---\nThis struct is intended for
