--- a/charts/irsa-manager/crds/irsa-crd.yaml
+++ b/charts/irsa-manager/crds/irsa-crd.yaml
@@ -152,6 +152,21 @@ spec:
                   - type
                   type: object
                 type: array
+              serviceAccounts:
+                description: Inventory of applied service resources
+                items:
+                  description: IRSANamespacedNameWithTags is like a types.NamespacedName
+                    with JSON tags
+                  properties:
+                    name:
+                      type: string
+                    namespace:
+                      type: string
+                  required:
+                  - name
+                  - namespace
+                  type: object
+                type: array
             type: object
         type: object
     served: true
