immutable field: "mode"

--- a/charts/irsa-manager/crds/irsasetup-crd.yaml
+++ b/charts/irsa-manager/crds/irsasetup-crd.yaml
@@ -82,6 +82,9 @@ spec:
                 - selfhosted
                 - eks
                 type: string
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               provider:
                 description: |-
                   IamOIDCProvider configures IAM OIDC IamOIDCProvider Name
