--- a/config/crd/bases/irsa-manager.kkb0318.github.io_irsasetups.yaml
+++ b/config/crd/bases/irsa-manager.kkb0318.github.io_irsasetups.yaml
@@ -83,6 +83,9 @@ spec:
                 - selfhosted
                 - eks
                 type: string
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               provider:
                 description: |-
                   IamOIDCProvider configures IAM OIDC IamOIDCProvider Name
