Allow short-lived AWS credentials
Add SESSION_TOKEN to aws-secret and the pod
environment. (Fixes #3)

--- a/charts/irsa-manager/templates/deployment.yaml
+++ b/charts/irsa-manager/templates/deployment.yaml
@@ -37,6 +37,11 @@ spec:
             secretKeyRef:
               key: aws-secret-access-key
               name: aws-secret
+        - name: AWS_SESSION_TOKEN
+          valueFrom:
+            secretKeyRef:
+              key: aws-session-token
+              name: aws-secret
         - name: AWS_REGION
           valueFrom:
             secretKeyRef:
