--- a/charts/irsa-manager/templates/deployment.yaml
+++ b/charts/irsa-manager/templates/deployment.yaml
@@ -32,21 +32,25 @@ spec:
             secretKeyRef:
               key: aws-access-key-id
               name: aws-secret
+              optional: true
         - name: AWS_SECRET_ACCESS_KEY
           valueFrom:
             secretKeyRef:
               key: aws-secret-access-key
               name: aws-secret
+              optional: true
         - name: AWS_SESSION_TOKEN
           valueFrom:
             secretKeyRef:
               key: aws-session-token
               name: aws-secret
+              optional: true
         - name: AWS_REGION
           valueFrom:
             secretKeyRef:
               key: aws-region
               name: aws-secret
+              optional: true
         - name: AWS_ROLE_ARN
           valueFrom:
             secretKeyRef:
